@@ -134,6 +134,10 @@ OpenTypeAction.tooltip= Open Type
 ActionDefinition.openType.name= Open Type
 ActionDefinition.openType.description= Open a type in a C editor
 
+#Add include
+ActionDefinition.addInclude.name= Add Include
+ActionDefinition.addInclude.description= Create include statement on selection
+
 CElementWorkingSetPage.name = C/C++
 
 CEditorFontDefinition.description = The C/C++ editor text font is used by C/C++ editors.
