@@ -698,6 +698,18 @@
             command="org.eclipse.cdt.ui.edit.text.c.open.type.hierarchy"
             configuration="org.eclipse.ui.defaultAcceleratorConfiguration">
       </keyBinding>
+      <command
+            name="%ActionDefinition.addInclude.name"
+            description="%ActionDefinition.addInclude.description"
+            category="org.eclipse.cdt.ui.category.source"
+            id="org.eclipse.cdt.ui.edit.text.c.add.include">
+      </command>
+      <keyBinding
+            string="Ctrl+Shift+N"
+            scope="org.eclipse.cdt.ui.cEditorScope"
+            command="org.eclipse.cdt.ui.edit.text.c.add.include"
+            configuration="org.eclipse.ui.defaultAcceleratorConfiguration">
+      </keyBinding>
    </extension>
    <extension
          id="org.eclipse.cdt.ui.CSearchPage"
