@@ -10,7 +10,7 @@ AddIncludeOnSelection.error.message1=Adding include statements failed
 AddIncludeOnSelection.error.message2=Error
 AddIncludeOnSelection.error.message3=Error
 AddIncludeOnSelection.error.message4=BadLocationException: 
-AddIncludeOnSelection.label=Add I&nclude@Ctrl+Shift+N
+AddIncludeOnSelection.label=Add I&nclude
 AddIncludeOnSelection.tooltip=Add Include Statement on Selection
 
 ShowInCView.description=Show the current resource in the C/C++ Projects view
